Refactor addressVerificationsInOrder in OrderServiceImpl and create the NoDeliveryAddressFoundException.